--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">CarWash</string>
+    <string name="app_name">세차하기 좋은날</string>
     <string name="title_home">Home</string>
     <string name="title_dashboard">세차하기 좋은날</string>
     <string name="title_notifications">김스오토케어</string>
